# mini_yocaml

./: LICENSE  README.md  dune-project  mini_yocaml.opam
lib/: IO.ml  IO.mli  action.ml  action.mli  deps.ml  deps.mli  dune  rule.ml  rule.mli
playground/: dune  playground.ml
test/: deps_test.ml  deps_test.mli  dune  fake_file_system.ml  fake_file_system.mli  mini_yocaml_test.ml  rule_test.ml
